--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
           <div class="card-body">
             <h4>$29 / month</h4>
             <ul class="list-unstyled">
-              <li> Job & client tracking</li>
-              <li> Job calendar with crew assignments</li>
-              <li> Task lists per job</li>
-              <li> Job photo uploads (before/after)</li>
-              <li> Mobile-friendly access for field use</li>
-              <li> Job reminders and notifications</li>
-              <li> Basic reporting dashboard (e.g. jobs this month, open/completed)</li>
+              <li> -Job & client tracking</li>
+              <li> -Job calendar with crew assignments</li>
+              <li> -Task lists per job</li>
+              <li> -Job photo uploads (before/after)</li>
+              <li> -Mobile-friendly access for field use</li>
+              <li> -Job reminders and notifications</li>
+              <li> -Basic reporting dashboard (e.g. jobs this month, open/completed)</li>
             </ul>
             <a href="signup.html" class="btn btn-primary">Get Started</a>
           </div>
@@ -73,16 +73,16 @@
           <div class="card-body">
             <h4>$59 / month</h4>
             <ul class="list-unstyled">
-              <li> Everything in Starter</li>
-              <li> Multi-user access with roles/permissions</li>
-              <li> Drag-and-drop job scheduling</li>
-              <li> Job status tracking (e.g. Scheduled → In Progress → Completed)</li>
-              <li> File/document uploads (e.g. permits, plans)</li>
-              <li> Job-level internal comments/notes</li>
-              <li> Optional team chat/messaging per job</li>
-              <li> Customer pipeline tracker:
+              <li> -Everything in Starter</li>
+              <li> -Multi-user access with roles/permissions</li>
+              <li> -Drag-and-drop job scheduling</li>
+              <li> -Job status tracking (e.g. Scheduled → In Progress → Completed)</li>
+              <li> -File/document uploads (e.g. permits, plans)</li>
+              <li> -Job-level internal comments/notes</li>
+              <li> -Optional team chat/messaging per job</li>
+              <li> -Customer pipeline tracker:
 Manage new leads through stages like “New,” “Contacted,” “Walkthrough Scheduled,” “Job Approved,”</li>
-              <li> Stripe & QuickBooks Online (Basic):
+              <li> -Stripe & QuickBooks Online (Basic):
 Stripe: Accept payments (optional)
 QBO: Sync customer contact info and job records</li>
             </ul>
@@ -100,18 +100,18 @@ QBO: Sync customer contact info and job records</li>
           <div class="card-body">
             <h4>$119 / month</h4>
             <ul class="list-unstyled">
-              <li> Everything in Team</li>
-              <li> Multiple team/region support (e.g. assign crews by area)</li>
-              <li> Workflow automation:
+              <li> -Everything in Team</li>
+              <li> -Multiple team/region support (e.g. assign crews by area)</li>
+              <li> -Workflow automation:
 Auto-reminders for tasks or status changes
 Auto-mark jobs as completed when tasks are done</li>
-              <li> Advanced reporting:
+              <li> -Advanced reporting:
 Crew productivity
 Job cycle times
 Job volume per team</li>
-              <li> Auto-sync to QuickBooks/Xero (customers, payments, job data)</li>
-              <li> CRM sync with HubSpot or Salesforce (for companies with external sales teams)</li>
-              <li> Priority support and onboarding:
+              <li> -Auto-sync to QuickBooks/Xero (customers, payments, job data)</li>
+              <li> -CRM sync with HubSpot or Salesforce (for companies with external sales teams)</li>
+              <li> -Priority support and onboarding:
 Faster support response times
 Account setup assistance</li>
             </ul>
