--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h2>Choose Your Plan</h2>
       <p class="text-muted">Start tracking jobs in under 5 minutes</p>
     </div>
-    <div class="row text-center">
+    <div class="row text-left">
       <!-- Starter -->
       <div class="col-md-4 mb-4">
         <div class="card">
