--- a/index.html
+++ b/index.html
@@ -76,12 +76,11 @@
               <li> -Everything in Starter</li>
               <li> -Multi-user access with roles/permissions</li>
               <li> -Drag-and-drop job scheduling</li>
-              <li> -Job status tracking (e.g. Scheduled → In Progress → Completed)</li>
-              <li> -File/document uploads (e.g. permits, plans)</li>
+              <li> -Job status tracking</li>
+              <li> -File/document uploads</li>
               <li> -Job-level internal comments/notes</li>
               <li> -Optional team chat/messaging per job</li>
-              <li> -Customer pipeline tracker:
-Manage new leads through stages like “New,” “Contacted,” “Walkthrough Scheduled,” “Job Approved,”</li>
+              <li> -Customer pipeline tracker</li>
               <li> -Stripe & QuickBooks Online (Basic):
 Stripe: Accept payments (optional)
 QBO: Sync customer contact info and job records</li>
@@ -105,11 +104,8 @@ QBO: Sync customer contact info and job records</li>
               <li> -Workflow automation:
 Auto-reminders for tasks or status changes
 Auto-mark jobs as completed when tasks are done</li>
-              <li> -Advanced reporting:
-Crew productivity
-Job cycle times
-Job volume per team</li>
-              <li> -Auto-sync to QuickBooks/Xero (customers, payments, job data)</li>
+              <li> -Advanced reporting</li>
+              <li> -Auto-sync to QuickBooks/Xero</li>
               <li> -CRM sync with HubSpot or Salesforce (for companies with external sales teams)</li>
               <li> -Priority support and onboarding:
 Faster support response times
